--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NYT Strands Solver</title>
-    <script src="strands.js"></script>
-    <script src="glue.js"></script>
-    <link rel="stylesheet" href="css/main.css">
-    <script src="js/board.js"></script>
-    <script src="js/main.js" ></script>
+    <script src="./strands.js"></script>
+    <script src="./glue.js"></script>
+    <link rel="stylesheet" href="./css/main.css">
+    <script src="./js/board.js"></script>
+    <script src="./js/main.js" ></script>
 </head>
 <body>
 <div id="cover" style="display: none;">
