fixed inncorrect double quotes causing css to not load

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>NYT Strands Solver</title>
     <script src="./strands.js"></script>
     <script src="./glue.js"></script>
-    <link rel="stylesheet" type=“text/css” href="./css/main.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
     <script src="./js/board.js"></script>
     <script src="./js/main.js" ></script>
 </head>
